--- a/.github/workflows/any_test_coverage.yml
+++ b/.github/workflows/any_test_coverage.yml
@@ -11,7 +11,8 @@ jobs:
 
     services:
       mysql:
-        image: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-mysql:latest
+        # image: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}-mysql:latest
+        image: ghcr.io/${{ github.repository_owner }}/digital_ocean_mysql_template-mysql:latest
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: default_database_test
