--- a/.github/workflows/any_test_coverage.yml
+++ b/.github/workflows/any_test_coverage.yml
@@ -34,6 +34,13 @@ jobs:
     - name: checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.test_build_token }}
+
     - name: build php container
       run: docker build -t php-container -f Dockerfile .
 
