--- a/.github/workflows/any_test_coverage.yml
+++ b/.github/workflows/any_test_coverage.yml
@@ -22,6 +22,9 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.test_build_token }}
 
     env:
       MYSQL_HOST: 127.0.0.1
