--- a/.github/workflows/any_test_coverage.yml
+++ b/.github/workflows/any_test_coverage.yml
@@ -26,6 +26,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.test_build_token }}
 
+    env:
+      MYSQL_HOST: 127.0.0.1
+      MYSQL_PORT: 3306
+      MYSQL_USERNAME: test_user
+      MYSQL_PASSWORD: test_password
+      MYSQL_DATABASE: default_database
+
     steps:
     - name: checkout repository
       uses: actions/checkout@v2
@@ -46,25 +53,14 @@ jobs:
     #     docker run --rm  -v ${{ github.workspace }}:/app php-container composer install
 
     - name: run transition
-      env:
-        MYSQL_HOST: 127.0.0.1
-        MYSQL_PORT: 3306
-        MYSQL_USERNAME: test_user
-        MYSQL_PASSWORD: test_password
-        MYSQL_DATABASE: default_database
       run: |
-        docker run --rm --network host php-container env
-        docker run --rm --network host php-container bin/cake transition
+        env > ./env_file
+        docker run --env-file ./env_file --rm --network host php-container bin/cake transition
 
     - name: run phpunit tests
-      env:
-        MYSQL_HOST: 127.0.0.1
-        MYSQL_PORT: 3306
-        MYSQL_USERNAME: test_user
-        MYSQL_PASSWORD: test_password
-        MYSQL_DATABASE: default_database
       run: |
-        docker run --rm --network host php-container vendor/bin/phpunit --stop-on-failure
+        env > ./env_file
+        docker run --env-file ./env_file --rm --network host php-container vendor/bin/phpunit --stop-on-failure
 
     # run tests and upload coverage:
     # note how to mount files into the container with -v flag
